# my_ai_projects

./: pyproject.toml
utils/: scraper.py
week1/: README.md
week1/day1/: property_finder.py  scraper.py  summarize_website copy.py  summarize_website.py  testcase_generator.py
week1/day2/: chat_completion_api.py  summarize_website_ollama.py
